feat: Se desarrolla las funcionalidades asociadas al tema de la nueva modalidad llamada pasantía interna, se relealizar pequeñas modificaciones para que el sistema reconozco esta pasantía como una nueva modalidad y se realicen las validaciones necesarias a la misma.
